<resources>
    <string name="app_name">Proiect Android</string>
    <string name="text_hello">Say hello</string>
    <string name="back_activity2">Logout</string>
    <string name="login_mainActivity">Login</string>
    <string name="register_mainActivity">Don\'t have an account? Sign up!</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="register_activityRegister">Register</string>
    <string name="already_registered_sign_in">Already registered? Sign in!</string>
    <string name="recipe_difficulty">Difficulty: Easy</string>
    <string name="recipe_time">Prep Time: 30 min</string>
    <string name="recipe_name">Recipe Name</string>
</resources>