<?xml version="1.0" encoding="utf-8"?>
<!-- item_recipe.xml -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Container for the recipe photo -->







    <!-- Horizontal list for name, time, and difficulty -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_time" />

        <TextView
            android:id="@+id/recipeDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_difficulty" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />


</LinearLayout>
